attached_assets/Pasted-Android-node-modules-expo-router-entry-js-90-1-1296-136_1768684424710.txt
Android node_modules/expo-router/entry.js ▓▓▓▓▓▓▓▓▓▓▓▓▓▓░░ 90.1% (1296/1365)
Android Bundled 2556ms node_modules/expo-router/entry.js (1522 modules)
Writing bundle output to: /home/expo/workingdir/build/frontend/android/app/build/generated/assets/createBundleReleaseJsAndAssets/index.android.bundle
Writing sourcemap output to: /home/expo/workingdir/build/frontend/android/app/build/intermediates/sourcemaps/react/release/index.android.bundle.packager.map
Copying 45 asset files
Done writing bundle output
Done writing sourcemap output
> Task :react-native-gesture-handler:javaPreCompileRelease
> Task :react-native-safe-area-context:checkKotlinGradlePluginConfigurationErrors SKIPPED
> Task :react-native-safe-area-context:generateReleaseBuildConfig
> Task :react-native-reanimated:compileReleaseJavaWithJavac
/home/expo/workingdir/build/frontend/node_modules/react-native-reanimated/android/src/main/java/com/swmansion/reanimated/ReanimatedPackage.java:79: error: cannot find symbol
    Systrace.beginSection(Systrace.TRACE_TAG_REACT_JAVA_BRIDGE, "createUIManagerModule");
                                  ^
  symbol:   variable TRACE_TAG_REACT_JAVA_BRIDGE
location: class Systrace
/home/expo/workingdir/build/frontend/node_modules/react-native-reanimated/android/src/main/java/com/swmansion/reanimated/ReanimatedPackage.java:87: error: cannot find symbol
      Systrace.endSection(Systrace.TRACE_TAG_REACT_JAVA_BRIDGE);
                                  ^
  symbol:   variable TRACE_TAG_REACT_JAVA_BRIDGE
  location: class Systrace
/home/expo/workingdir/build/frontend/node_modules/react-native-reanimated/android/src/reactNativeVersionPatch/BorderRadiiDrawableUtils/latest/com/swmansion/reanimated/BorderRadiiDrawableUtils.java:21: error: method resolve in class LengthPercentage cannot be applied to given types;
    return length.resolve(bounds.width(), bounds.height()).toPixelFromDIP().getHorizontal();
                 ^
  required: float
  found:    int,int
  reason: actual and formal argument lists differ in length
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
3 errors
> Task :react-native-reanimated:compileReleaseJavaWithJavac FAILED
> Task :react-native-safe-area-context:compileReleaseKotlin
w: file:///home/expo/workingdir/build/frontend/node_modules/react-native-safe-area-context/android/src/main/java/com/th3rdwave/safeareacontext/SafeAreaView.kt:59:23 'val uiImplementation: UIImplementation!' is deprecated. Deprecated in Java.
> Task :stripe_stripe-react-native:dataBindingMergeDependencyArtifactsRelease
[Incubating] Problems report is available at: file:///home/expo/workingdir/build/frontend/android/build/reports/problems/problems-report.html
FAILURE: Build failed with an exception.
* What went wrong:
Execution failed for task ':react-native-reanimated:compileReleaseJavaWithJavac'.
> Compilation failed; see the compiler output below.
  /home/expo/workingdir/build/frontend/node_modules/react-native-reanimated/android/src/reactNativeVersionPatch/BorderRadiiDrawableUtils/latest/com/swmansion/reanimated/BorderRadiiDrawableUtils.java:21: error: method resolve in class LengthPercentage cannot be applied to given types;
      return length.resolve(bounds.width(), bounds.height()).toPixelFromDIP().getHorizontal();
                   ^
    required: float
    found:    int,int
    reason: actual and formal argument lists differ in length
  Note: Recompile with -Xlint:deprecation for details.
  /home/expo/workingdir/build/frontend/node_modules/react-native-reanimated/android/src/main/java/com/swmansion/reanimated/ReanimatedPackage.java:79: error: cannot find symbol
      Systrace.beginSection(Systrace.TRACE_TAG_REACT_JAVA_BRIDGE, "createUIManagerModule");
                                    ^
    symbol:   variable TRACE_TAG_REACT_JAVA_BRIDGE
    location: class Systrace
  /home/expo/workingdir/build/frontend/node_modules/react-native-reanimated/android/src/main/java/com/swmansion/reanimated/ReanimatedPackage.java:87: error: cannot find symbol
        Systrace.endSection(Systrace.TRACE_TAG_REACT_JAVA_BRIDGE);
^
    symbol:   variable TRACE_TAG_REACT_JAVA_BRIDGE
    location: class Systrace
  Note: Recompile with -Xlint:unchecked for details.
  Note: Some input files use or override a deprecated API.
  Note: Some input files use unchecked or unsafe operations.
  3 errors
* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.
BUILD FAILED in 2m 21s
Deprecated Gradle features were used in this build, making it incompatible with Gradle 9.0.
You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.
For more on this, please refer to https://docs.gradle.org/8.14.3/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.
171 actionable tasks: 171 executed
Error: Gradle build failed with unknown error. See logs for the "Run gradlew" phase for more information.